# neural_assemblies_simulation

./: Readme.md  cross_region_tests.py  laptop_tests.py  main_test_protocol.py  pyproject.toml  requirements.txt  run_cross_region_tests.py  test_geometric_gluing.py  test_info_geom_framework.py  test_optimized_info_geom.py  test_optimized_quick.py
analysis/buzsaki/: assembly_extraction.py
core/: assembly_detector.py  information_geometry.py  oscillator.py  tropical_math.py
core/error_correction/: casimir_invariants.py  e8_projection.py
core/geometry/: coadjoint_orbits.py  coordinate_free.py  information_metric.py
core/laglands/: eigencurve.py  galois_representations.py  l_functions.py  padic_modular_forms.py
core/sheaf/: cohomology.py  neural_sheaf.py  spectral_sequences.py
core/tropical/: max_plus_algebra.py  piecewise_geodesics.py
data/loaders/: buzsaki_hc5_loader.py  neuropixels_loader.py
dataset/: hc5_dataset_interface.py
experiments/: __init__.py  ablations.py  evaluate.py  train_segmentation.py
experiments/configs/: ablation.yaml  baseline.yaml  medical.yaml
networks/: hippocampal_network.py
test_results/: test_results.json
tests/: test_assembly.py  test_segmentation.py  test_tropical_ops.py
topology/: geometric_gluing.py  sheaf_cohomology.py
triple_code/: e8_lattice.py  golay_code.py  integrated_triple_code.py  padic_code.py
tropical_sdr/: __init__.py
tropical_sdr/assembly/: __init__.py  assembly.py  competition.py  learning.py  network.py
tropical_sdr/core/: __init__.py  padic.py  polytope.py  (+2 more)
validation/: buzsaki_metrics.py
(+9 files in other folders)
